# forge

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  ralph.log.iter10  ralph.log.iter2  ralph.log.iter3  ralph.log.iter4  ralph.log.iter5  ralph.log.iter6  ralph.log.iter7  ralph.log.iter8  ralph.log.iter9  ralph2.sh  requirements.md  run_ralph.sh
.github/workflows/: ci.yml
docs/: cli-reference.md  configuration.md  extending-llm-providers.md  extending-parsers.md
examples/: README.md  ci-cd.yaml  full-featured.yaml  local-only.yaml  minimal.yaml  multi-org.yaml
forge-cli/: Cargo.toml
forge-cli/src/: config.rs  errors.rs  lib.rs  llm_instructions.rs  main.rs  output.rs  progress.rs  token_budget.rs
forge-cli/src/commands/: init.rs  map.rs  mod.rs  survey.rs
forge-cli/src/serializers/: json.rs  markdown.rs  mermaid.rs  mod.rs
forge-cli/tests/: e2e_full_workflow.rs  integration_llm.rs
forge-graph/: Cargo.toml
forge-graph/src/: edge.rs  error.rs  graph.rs  lib.rs  node.rs  query.rs
forge-llm/: Cargo.toml
forge-llm/src/: interview.rs  lib.rs  provider.rs
forge-llm/src/adapters/: base.rs  claude.rs  codex.rs  gemini.rs  mod.rs
forge-survey/: Cargo.toml
forge-survey/src/: coupling.rs  detection.rs  github.rs  graph_builder.rs  incremental.rs  lib.rs
forge-survey/src/parser/: cloudformation.rs  javascript.rs  mod.rs  python.rs  terraform.rs  traits.rs
forge-survey/tests/: common.rs  integration_coupling.rs  integration_js.rs  integration_multi.rs  integration_python.rs  mod.rs
ralph-dashboard/: index.html  server.py  start.sh
ralph-logs/: current-run.jsonl  ralph_20260123_103622.jsonl  ralph_20260123_231053.jsonl
spec/: README.md  m1-foundation.md  m2-survey-core.md  m3-multi-language.md  m4-implicit-coupling.md  m5-serialization.md  m6-business-context.md  m7-polish.md  m8-deployment-metadata.md  m8-llm-instructions.md  m8-llm-optimization.md
