[package]
name = "forge-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CLI entry point for Forge"

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
forge-graph = { path = "../forge-graph" }
forge-survey = { path = "../forge-survey" }
forge-llm = { path = "../forge-llm" }

# CLI framework
clap = { version = "4.4", features = ["derive"] }

# Configuration
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
dirs = "5.0"
glob = "0.3"

# Error handling
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Time/date handling
chrono = { workspace = true }

# Token counting for LLM budget management
tiktoken-rs = "0.6"

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
