[package]
name = "forge-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Knowledge graph data structures for Forge"

[dependencies]
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
