[package]
name = "forge-survey"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Code analysis and discovery for Forge"

[dependencies]
forge-graph = { path = "../forge-graph" }
octocrab = "0.44"
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
walkdir = "2.5"
serde = { workspace = true }
serde_json = { workspace = true }

# Tree-sitter for AST parsing
tree-sitter = "0.24"
tree-sitter-javascript = "0.23"
streaming-iterator = "0.1"

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
