[package]
name = "forge-survey"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Code analysis and discovery for Forge"

[dependencies]
forge-graph = { path = "../forge-graph" }
octocrab = "0.44"
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
walkdir = "2.5"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Tree-sitter for AST parsing
tree-sitter = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
streaming-iterator = "0.1"

# HCL parsing for Terraform
hcl-rs = "0.18"

# YAML parsing for CloudFormation/SAM
serde_yaml = "0.9"

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
